doks-ingress/flask-hello-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: flask-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-hello
  template:
    metadata:
      labels:
        app: flask-hello
    spec:
      containers:
        - name: private-flask-test
          image: docker.io/mattfeng/private-flask-test:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred
