doks-ingress/do-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "www.biologyolympiads.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-hello
            port:
              number: 80
  - host: "hw1.biologyolympiads.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: "hw2.biologyolympiads.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
